// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|FilterForm Create form 1`] = `
.c6 {
  height: 155px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c7 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c9 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c1 {
  position: static;
}

.c2 {
  padding-top: 7px;
  margin-top: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c3 label {
  margin-bottom: 2px;
}

.c4 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c5 {
  display: grid;
  grid-template-columns: 100%;
}

.c0 {
  padding-top: 24px;
}

@media (min-width:1050px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c7 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c9 {
    width: 240px;
  }
}

@media (min-width:768px) {
  .c5 {
    grid-template-columns: auto auto;
    grid-gap: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <form
    action="#"
    className="c0"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          Filter Name
        </label>
        <input
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontFamily": "inherit",
              "fontSize": "18px",
              "fontWeight": "inherit",
              "letterSpacing": "normal",
              "lineHeight": "24px",
              "maxWidth": "100%",
              "minWidth": 100,
              "outline": "none",
              "padding": 0,
            }
          }
          type="text"
          value=""
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="c2"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Field
      </label>
      <input
        id="field"
        name="field"
        type="hidden"
        value="field"
      />
      <div
        className="c4"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              field
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "183px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Filter Type
      </label>
      <input
        id="filterType"
        name="filterType"
        type="hidden"
        value="checkbox"
      />
      <div
        className="c4"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              checkbox
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "183px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              checkbox
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="fieldType"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Field Type
          </label>
          <input
            disabled={true}
            id="fieldType"
            name="fieldType"
            onBlur={[Function]}
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 100,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="string"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="unique"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Unique items
          </label>
          <input
            disabled={true}
            id="unique"
            name="unique"
            onBlur={[Function]}
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 100,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="1"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <button
            className="c9"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="button"
          >
            Cancel
          </button>
          <button
            className="c9"
            disabled={true}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="submit"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Shared Components|FilterForm Edit form 1`] = `
.c8 {
  height: 155px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c9 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c11 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c1 {
  position: static;
}

.c2 {
  padding-top: 7px;
  margin-top: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c3 label {
  margin-bottom: 2px;
}

.c4 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c5 {
  display: grid;
  grid-template-columns: 100%;
}

.c0 {
  padding-top: 24px;
}

.c7 {
  cursor: pointer;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c7:hover {
  border-bottom: 1px solid #FFF;
}

.c6 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (min-width:1050px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c9 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c11 {
    width: 240px;
  }
}

@media (min-width:768px) {
  .c5 {
    grid-template-columns: auto auto;
    grid-gap: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <form
    action="#"
    className="c0"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          Filter Name
        </label>
        <input
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontFamily": "inherit",
              "fontSize": "18px",
              "fontWeight": "inherit",
              "letterSpacing": "normal",
              "lineHeight": "24px",
              "maxWidth": "100%",
              "minWidth": 100,
              "outline": "none",
              "padding": 0,
            }
          }
          type="text"
          value="name"
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="c2"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Field
      </label>
      <input
        id="field"
        name="field"
        type="hidden"
        value="field"
      />
      <div
        className="c4"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              field
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "183px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Filter Type
      </label>
      <input
        id="filterType"
        name="filterType"
        type="hidden"
        value="checkbox"
      />
      <div
        className="c4"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              checkbox
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "183px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              checkbox
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="fieldType"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Field Type
          </label>
          <input
            disabled={true}
            id="fieldType"
            name="fieldType"
            onBlur={[Function]}
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 100,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="string"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="unique"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Unique items
          </label>
          <input
            disabled={true}
            id="unique"
            name="unique"
            onBlur={[Function]}
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 100,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="1"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="c6"
    >
      <span
        className="c7"
        onClick={[Function]}
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
          }
        }
      >
        Remove filter
      </span>
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <button
            className="c11"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="c11"
            disabled={true}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="submit"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
